@@ -294,7 +294,7 @@ public class AllTests
         response(Ice.Object o)
         {
             test(o instanceof Ice.UnknownSlicedValue);
-            test(((Ice.UnknownSlicedValue)o).getUnknownTypeId().equals("::Test::SUnknown"));
+            test(((Ice.UnknownSlicedValue)o).ice_id().equals("::Test::SUnknown"));
             callback.called();
         }
 
@@ -1540,7 +1540,8 @@ public class AllTests
                 o = test.SUnknownAsObject();
                 test(!test.ice_getEncodingVersion().equals(Ice.Util.Encoding_1_0));
                 test(o instanceof Ice.UnknownSlicedValue);
-                test(((Ice.UnknownSlicedValue)o).getUnknownTypeId().equals("::Test::SUnknown"));
+                test(((Ice.UnknownSlicedValue)o).ice_id().equals("::Test::SUnknown"));
+                test(((Ice.UnknownSlicedValue)o).ice_getSlicedData() != null);
                 test.checkSUnknown(o);
             }
             catch(Ice.NoValueFactoryException ex)
@@ -2471,7 +2472,7 @@ public class AllTests
                 int i;
                 for(i = 0; i < 10; ++i)
                 {
-                    String s = "D1." + new Integer(i).toString();
+                    String s = "D1." + Integer.valueOf(i).toString();
                     D1 d1 = new D1();
                     d1.sb = s;
                     d1.pb = d1;
@@ -2486,7 +2487,7 @@ public class AllTests
                 {
                     B b = boutH.value.get(i * 10);
                     test(b != null);
-                    String s = "D1." + new Integer(i).toString();
+                    String s = "D1." + Integer.valueOf(i).toString();
                     test(b.sb.equals(s));
                     test(b.pb != null);
                     test(b.pb != b);
@@ -2499,7 +2500,7 @@ public class AllTests
                 {
                     B b = r.get(i * 20);
                     test(b != null);
-                    String s = "D1." + new Integer(i * 20).toString();
+                    String s = "D1." + Integer.valueOf(i * 20).toString();
                     test(b.sb.equals(s));
                     test(b.pb == (i == 0 ? null : r.get((i - 1) * 20)));
                     D1 d1 = (D1)b;
@@ -2524,7 +2525,7 @@ public class AllTests
             int i;
             for(i = 0; i < 10; ++i)
             {
-                String s = "D1." + new Integer(i).toString();
+                String s = "D1." + Integer.valueOf(i).toString();
                 D1 d1 = new D1();
                 d1.sb = s;
                 d1.pb = d1;
@@ -2543,7 +2544,7 @@ public class AllTests
             {
                 B b = bout.get(i * 10);
                 test(b != null);
-                String s = "D1." + new Integer(i).toString();
+                String s = "D1." + Integer.valueOf(i).toString();
                 test(b.sb.equals(s));
                 test(b.pb != null);
                 test(b.pb != b);
@@ -2556,7 +2557,7 @@ public class AllTests
             {
                 B b = r.get(i * 20);
                 test(b != null);
-                String s = "D1." + new Integer(i * 20).toString();
+                String s = "D1." + Integer.valueOf(i * 20).toString();
                 test(b.sb.equals(s));
                 test(b.pb == (i == 0 ? null : r.get((i - 1) * 20)));
                 D1 d1 = (D1)b;
@@ -2898,7 +2899,15 @@ public class AllTests
             test.checkPBSUnknown(p);
             if(!test.ice_getEncodingVersion().equals(Ice.Util.Encoding_1_0))
             {
+                Ice.SlicedData slicedData = p.ice_getSlicedData();
+                test(slicedData != null);
+                test(slicedData.slices.length == 1);
+                test(slicedData.slices[0].typeId.equals("::Test::PSUnknown"));
                 ((TestIntfPrx)test.ice_encodingVersion(Ice.Util.Encoding_1_0)).checkPBSUnknown(p);
+            }
+            else
+            {
+                test(p.ice_getSlicedData() == null);
             }
         }
         catch(Ice.OperationNotExistException ex)
