@@ -494,7 +494,7 @@ public class InputStream
     public void resize(int sz)
     {
         _buf.resize(sz, true);
-        _buf.b.position(sz);
+        _buf.position(sz);
     }
 
     public Buffer getBuffer()
@@ -669,7 +669,7 @@ public class InputStream
             // Skip the optional content of the encapsulation if we are expecting an
             // empty encapsulation.
             //
-            _buf.b.position(_buf.b.position() + sz - 6);
+            _buf.position(_buf.b.position() + sz - 6);
         }
         return encoding;
     }
@@ -697,11 +697,11 @@ public class InputStream
         if(encoding != null)
         {
             encoding.ice_readMembers(this);
-            _buf.b.position(_buf.b.position() - 6);
+            _buf.position(_buf.b.position() - 6);
         }
         else
         {
-            _buf.b.position(_buf.b.position() - 4);
+            _buf.position(_buf.b.position() - 4);
         }
 
         byte[] v = new byte[sz];
@@ -752,7 +752,7 @@ public class InputStream
         EncodingVersion encoding = EncodingVersion.ice_read(this);
         try
         {
-            _buf.b.position(_buf.b.position() + sz - 6);
+            _buf.position(_buf.b.position() + sz - 6);
         }
         catch(IllegalArgumentException ex)
         {
@@ -1030,8 +1030,10 @@ public class InputStream
         {
             final int sz = readAndCheckSeqSize(1);
             java.nio.ByteBuffer v = _buf.b.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.ByteBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1043,6 +1045,8 @@ public class InputStream
     /**
      * Extracts a serializable Java object from the stream.
      *
+     * @param <T> The serializable type.
+     * @param cl The class for the serializable type.
      * @return The deserialized Java object.
      **/
     public <T extends java.io.Serializable> T readSerializable(Class<T> cl)
@@ -1086,7 +1090,9 @@ public class InputStream
     /**
      * Extracts a optional serializable Java object from the stream.
      *
+     * @param <T> The serializable type.
      * @param tag The numeric tag associated with the value.
+     * @param cl The class for the serializable type.
      * @return The optional value (if any).
      **/
     public <T extends java.io.Serializable> java.util.Optional<T> readSerializable(int tag, Class<T> cl)
@@ -1225,7 +1231,7 @@ public class InputStream
             short[] v = new short[sz];
             java.nio.ShortBuffer shortBuf = _buf.b.asShortBuffer();
             shortBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 2);
+            _buf.position(_buf.b.position() + sz * 2);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1265,8 +1271,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(2);
             java.nio.ShortBuffer shortBuf = _buf.b.asShortBuffer();
             java.nio.ShortBuffer v = shortBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 2);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.ShortBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 2);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1323,7 +1331,7 @@ public class InputStream
             int[] v = new int[sz];
             java.nio.IntBuffer intBuf = _buf.b.asIntBuffer();
             intBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            _buf.position(_buf.b.position() + sz * 4);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1363,8 +1371,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(4);
             java.nio.IntBuffer intBuf = _buf.b.asIntBuffer();
             java.nio.IntBuffer v = intBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.IntBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 4);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1421,7 +1431,7 @@ public class InputStream
             long[] v = new long[sz];
             java.nio.LongBuffer longBuf = _buf.b.asLongBuffer();
             longBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            _buf.position(_buf.b.position() + sz * 8);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1461,8 +1471,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(8);
             java.nio.LongBuffer longBuf = _buf.b.asLongBuffer();
             java.nio.LongBuffer v = longBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.LongBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 8);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1519,7 +1531,7 @@ public class InputStream
             float[] v = new float[sz];
             java.nio.FloatBuffer floatBuf = _buf.b.asFloatBuffer();
             floatBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            _buf.position(_buf.b.position() + sz * 4);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1559,8 +1571,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(4);
             java.nio.FloatBuffer floatBuf = _buf.b.asFloatBuffer();
             java.nio.FloatBuffer v = floatBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.FloatBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 4);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1617,7 +1631,7 @@ public class InputStream
             double[] v = new double[sz];
             java.nio.DoubleBuffer doubleBuf = _buf.b.asDoubleBuffer();
             doubleBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            _buf.position(_buf.b.position() + sz * 8);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1657,8 +1671,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(8);
             java.nio.DoubleBuffer doubleBuf = _buf.b.asDoubleBuffer();
             java.nio.DoubleBuffer v = doubleBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.DoubleBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 8);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1852,6 +1868,7 @@ public class InputStream
     /**
      * Extracts an optional proxy from the stream. The stream must have been initialized with a communicator.
      *
+     * @param <T> The proxy type.
      * @param tag The numeric tag associated with the value.
      * @param cast The uncheckedCast function to call on the unmarshaled proxy to obtain the correct proxy type.
      * @return The optional value (if any).
@@ -1901,6 +1918,8 @@ public class InputStream
     /**
      * Extracts a Slice value from the stream.
      *
+     * @param <T> The value type.
+     *
      * @param cb The consumer to notify when the extracted instance is available. The stream
      * extracts Slice values in stages. The Ice run time calls accept on the consumer when
      * the corresponding instance has been fully unmarshaled.
@@ -1943,6 +1962,8 @@ public class InputStream
 
     /**
      * Extracts an optional Slice value from the stream.
+     *
+     * @param <T> The value type.
      *
      * @param tag The numeric tag associated with the value.
      *
@@ -2032,7 +2053,7 @@ public class InputStream
             final int v = b < 0 ? b + 256 : b;
             if(v == Protocol.OPTIONAL_END_MARKER)
             {
-                _buf.b.position(_buf.b.position() - 1); // Rewind.
+                _buf.position(_buf.b.position() - 1); // Rewind.
                 return false;
             }
 
@@ -2046,7 +2067,7 @@ public class InputStream
             if(tag > readTag)
             {
                 int offset = tag < 30 ? 1 : (tag < 255 ? 2 : 6); // Rewind
-                _buf.b.position(_buf.b.position() - offset);
+                _buf.position(_buf.b.position() - offset);
                 return false; // No optional data members with the requested tag.
             }
             else if(tag < readTag)
@@ -2150,7 +2171,7 @@ public class InputStream
         {
             throw new UnmarshalOutOfBoundsException();
         }
-        _buf.b.position(_buf.b.position() + size);
+        _buf.position(_buf.b.position() + size);
     }
 
     /**
@@ -2182,7 +2203,7 @@ public class InputStream
      **/
     public void pos(int n)
     {
-        _buf.b.position(n);
+        _buf.position(n);
     }
 
     /**
@@ -2216,7 +2237,7 @@ public class InputStream
                 Class<?> c = _classResolver.apply(id);
                 if(c != null)
                 {
-                    userEx = (UserException)c.newInstance();
+                    userEx = (UserException)c.getDeclaredConstructor().newInstance();
                 }
             }
         }
@@ -2363,7 +2384,7 @@ public class InputStream
                 {
                     try
                     {
-                        v = (Value)cls.newInstance();
+                        v = (Value)cls.getDeclaredConstructor().newInstance();
                     }
                     catch(java.lang.Exception ex)
                     {
@@ -3126,8 +3147,8 @@ public class InputStream
             info.compactId = _current.compactId;
             info.hasOptionalMembers = (_current.sliceFlags & Protocol.FLAG_HAS_OPTIONAL_MEMBERS) != 0;
             info.isLastSlice = (_current.sliceFlags & Protocol.FLAG_IS_LAST_SLICE) != 0;
-            java.nio.ByteBuffer b = _stream.getBuffer().b;
-            final int end = b.position();
+            Buffer buffer = _stream.getBuffer();
+            final int end = buffer.b.position();
             int dataEnd = end;
             if(info.hasOptionalMembers)
             {
@@ -3138,9 +3159,9 @@ public class InputStream
                 --dataEnd;
             }
             info.bytes = new byte[dataEnd - start];
-            b.position(start);
-            b.get(info.bytes);
-            b.position(end);
+            buffer.position(start);
+            buffer.b.get(info.bytes);
+            buffer.position(end);
 
             if(_current.slices == null) // Lazy initialization
             {
@@ -3241,7 +3262,7 @@ public class InputStream
                         {
                             try
                             {
-                                v = (Value)cls.newInstance();
+                                v = (Value)cls.getDeclaredConstructor().newInstance();
                                 updateCache = false;
                             }
                             catch(java.lang.Exception ex)
